# Pytest_Demo

./: .gitignore  README.md  pyproject.toml
calculator/: pyproject.toml
calculator/src/: Makefile  equation.py  main.py
calculator/tests/: conftest.py  smoke_test.py  test_integration.py
front/: index.css  index.html
src/: algebra.py  equation.py  main.py
tests/: conftest.py  regression_test.py  smoke_test.py  unit_test.py
