[tool.poetry]
name = "calc"
version = "0.1.0"
description = ""
authors = ["Daanish Hindustani <daanishhindustani@yahoo.com>"]
readme = "README.md"
packages = [{include = "calc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pytest = "^8.3.4"
sympy = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
