[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Daanish Hindustani <daanishhindustani@yahoo.com>"]
readme = "README.md"
packages = [{include = "calculator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pytest = "^8.3.4"
flake8 = "^7.1.2"
black = "^25.1.0"
pre-commit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
